# ragmint

./: .gitignore  README (1).md  README.md  main.py  pyproject.toml  structure.txt  tuner.py
.github/workflows/: publish.yml  tests.yml
configs/: default.yaml
core/: pipeline.py  reranker.py  retriever.py
experiments/: validation_qa.json
src/ragmint/: qa_generator.py
src/ragmint/configs/: example_grid.yaml
src/ragmint/core/: retriever.py
src/ragmint/tests/: test_qa_generator.py
tests/: test_evaluator.py  test_optimizer.py  test_pipeline.py  test_retriever.py
utils/: data_loader.py  logger.py
