[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragmint"
version = "0.1.0"
description = "A modular framework for evaluating and optimizing RAG pipelines."
readme = "README.md"
license = { text = "Apache License 2.0" }
authors = [
  { name = "Andy Olivers", email = "andy@andyolivers.com" }
]
keywords = ["RAG", "LLM", "retrieval", "optimization", "AI", "evaluation"]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "openai>=1.0",
  "tqdm",
  "pyyaml",
  "chromadb>=0.4",
  "faiss-cpu; sys_platform != 'darwin'",
  "pytest",
  "colorama"
]

[project.urls]
Homepage = "https://github.com/andyolivers/ragmint"
Documentation = "https://andyolivers.com"
Issues = "https://github.com/andyolivers/ragmint/issues"

[tool.setuptools]
packages = ["ragmint"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["ragmint/tests"]
addopts = "-v"
